# concept-gate-taxonomy

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  cg_input_linter.py  cg_owl.py  cg_partwhole.py  concept_gate_v6_3.py  concept_gate_v7.py  fuzz_normalizer_types.py  pyproject.toml  pytest.ini  qa_v6_3.py  qa_v7.py  render.yaml  requirements.txt  sample_concepts.json  test_cg_normalizer.py  test_cg_obligations.py  test_cg_owl.py  test_cg_owl_guards.py  test_semantic_regressions.py  test_server.py  test_snapshot_integrity.py  test_type_fuzz.py
conceptgate/: __init__.py  cg_graph_export.py  cg_gufo.py  cg_input_linter.py  cg_normalizer.py  cg_obligations.py  cg_owl.py  cg_partwhole.py  concept_gate_v7.py  server.py
diagrams/: classify-facts-internal-flow.mmd  current-pipeline-equivalence-discarded.mmd  design-change-classify-two-pass-with-guards.mmd  design-change-output-contract-before-after.mmd  diagnose-model-internal-flow.mmd  lint-before-reasoning-upstream-defense.mmd  mcp-tool-surface-stages.mmd  mechanism_macro_change.mmd  problem-accidental-equivalence-hidden.mmd  proposed-facts-diagnostics-lint-separation.mmd  r2-classify-three-pass-minimal-diff.mmd  r2-equivalence-collection-trap-guards.mmd  r2-final-summary-fields-required-optional.mmd  r2-longterm-facts-diagnostics-split.mmd  r2-output-contract-required-recommended-optional.mmd  r2-recommended-minimal-thin-signal.mmd  r2-required-test-suite-five-cases.mmd  solution_arch_before_after.mmd  summary-propose-to-judge-chain.mmd  user-propose-verify-repair-loop.mmd
files/: LOCAL_INSTALL_GUIDE.md  README.md  cg_graph_export.py  cg_gufo.py  cg_input_linter.py  cg_normalizer.py  cg_partwhole.py  claude_desktop_config.json  codex_config.toml  concept_gate_v7.py  pyproject.toml  requirements.txt  server.py  test_server.py
(+132 files in other folders)
