[project]
name = "conceptgate-mcp"
version = "0.1.0"
description = "MCP server for ConceptGate — an FCA-based concept hierarchy classifier"
requires-python = ">=3.10"
dependencies = ["fastmcp>=3.4,<4"]

[project.scripts]
conceptgate-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "concept_gate_v7.py", "cg_graph_export.py"]
